--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   padding: 40px;
   align-items: center;
+  color: black;
 }
 
 .container {
